# kapestr

./: .gitignore  Cargo.toml  README.md  meson.build  meson_options.txt  shell.nix
build-aux/: cargo-build.sh
data/: kapestr.desktop.in  kapestr.gresource.xml  meson.build  py.com.kapestr.gschema.xml
data/icons/: meson.build
data/ui/: main_window.blp  post.blp
src/: app.rs  config.rs  config.rs.in  main.rs  mainar.rs  meson.build  win.rs
src/services/: mod.rs  post_fetch_service.rs
src/ui/: mod.rs
src/widgets/: post.rs
