[package]
name = "kapestr"
version = "0.1.0"
edition = "2021"
[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_5"] }
chrono = "0.4.38"
futures = "0.3.30"
gio = "0.19.8"
gnome = "0.1.0"
gtk4 = "0.8.2"
gtk4-sys = "0.8.2"
lazy_static = "1.5.0"
nostr = "0.32.1"
nostr-sdk = "0.32.0"
regex = "1.10.5"
reqwest = "0.12.5"
sourceview5 = "0.8.0"
sourceview5-sys = "0.8.0"
tokio = { version = "1.x", features = ["full"] }

