svg_files = files(
  'bell-outline-symbolic.svg',
  'check-plain-symbolic.svg',
  'clock-alt-symbolic.svg',
  'person-symbolic.svg',
  # 'star-filled-rounded-symbolic.svg'
)

# Install all SVG files to the specified directory
install_data(svg_files, install_dir: join_paths(iconsdir, 'hicolor', 'scalable', 'apps'))

